log
Sat, Apr 19, 2025 11:05:27 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025 11:07:15 PM: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9b0818d
Sat, Apr 19, 2025 11:09:47 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
6fc98a3
Sat, Apr 19, 2025 11:13:29 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:60:23: error: 'capacidad_antigua' undeclared (first use in this function)
     long nueva_cap  = capacidad_antigua * 2;
                       ^~~~~~~~~~~~~~~~~
hashmap.c:60:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:10: error: unused variable 'nueva_cap' [-Werror=unused-variable]
     long nueva_cap  = capacidad_antigua * 2;
          ^~~~~~~~~
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
hashmap.c:57:10: error: unused variable 'cap_antigua' [-Werror=unused-variable]
     long cap_antigua  = map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
0cba65d
Sat, Apr 19, 2025 11:13:33 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:60:23: error: 'capacidad_antigua' undeclared (first use in this function)
     long nueva_cap  = capacidad_antigua * 2;
                       ^~~~~~~~~~~~~~~~~
hashmap.c:60:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:10: error: unused variable 'nueva_cap' [-Werror=unused-variable]
     long nueva_cap  = capacidad_antigua * 2;
          ^~~~~~~~~
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
hashmap.c:57:10: error: unused variable 'cap_antigua' [-Werror=unused-variable]
     long cap_antigua  = map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
b2e2844
Sat, Apr 19, 2025 11:13:41 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:60:23: error: 'capacidad_antigua' undeclared (first use in this function)
     long nueva_cap  = capacidad_antigua * 2;
                       ^~~~~~~~~~~~~~~~~
hashmap.c:60:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:10: error: unused variable 'nueva_cap' [-Werror=unused-variable]
     long nueva_cap  = capacidad_antigua * 2;
          ^~~~~~~~~
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
hashmap.c:57:10: error: unused variable 'cap_antigua' [-Werror=unused-variable]
     long cap_antigua  = map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
43e67c4
Sat, Apr 19, 2025 11:14:39 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:60:23: error: 'capacidad_antigua' undeclared (first use in this function)
     long nueva_cap  = capacidad_antigua * 2;
                       ^~~~~~~~~~~~~~~~~
hashmap.c:60:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
hashmap.c:57:10: error: unused variable 'cap_antigua' [-Werror=unused-variable]
     long cap_antigua  = map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
b63d3f2
Sat, Apr 19, 2025 11:15:21 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
a141530
Sat, Apr 19, 2025 11:16:00 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 30/70
601c30a
Sat, Apr 19, 2025 11:17:24 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 30/70
fc521ab
Sat, Apr 19, 2025 11:17:48 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:90:12: error: 'map' undeclared (first use in this function)
     return map;
            ^~~
hashmap.c:90:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
8ff1db2
Sat, Apr 19, 2025 11:18:02 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
5890529
Sat, Apr 19, 2025 11:18:46 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
test.c: In function 'eraseMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
hashmap.c:95:10: error: unused variable 'originalIndex' [-Werror=unused-variable]
     long originalIndex = index;
          ^~~~~~~~~~~~~
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
116b213
Sat, Apr 19, 2025 11:19:45 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
test.c: In function 'eraseMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
hashmap.c:95:10: error: unused variable 'originalIndex' [-Werror=unused-variable]
     long originalIndex = index;
          ^~~~~~~~~~~~~
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
7bd254b
Sat, Apr 19, 2025 11:20:12 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|2
total_score: 50/70
e9473c2
Sat, Apr 19, 2025 11:21:30 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
test.c: In function 'searchMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
hashmap.c:111:10: error: unused variable 'og' [-Werror=unused-variable]
     long og = index;
          ^~
test.c:511:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
60826f4
